--- a/web/course.html
+++ b/web/course.html
@@ -11,16 +11,21 @@ require_once('db.php');
 require_once('log.php');
 require_once('util.php');
 
-$potCap = 500;
+$isTest = isset($_GET['test']);
+$test = $isTest ? "&test" : "";
+
+$potCap['ace'] = 500;
+$potCap['eagle'] = 150;
 
 # fetch course data
 $courseId = get_input('id', 'get');
 $sql = "SELECT * FROM course WHERE id=$courseId";
 $courseResult = db_query($sql, 'one');
 $courseNote = $courseResult['note'];
-$hcapRounds = $courseResult['handicap_rounds'];
+$hcapMinRounds = $courseResult['handicap_min_rounds'];
 $hcapStart = $courseResult['handicap_start'];
 $hcapRate = $courseResult['handicap_rate'];
+$hcapNumRounds = $courseResult['handicap_num_rounds'];
 $courseLayouts = $courseResult['layouts'];
 
 # fetch all the weeklies that have happened at the course
@@ -54,12 +59,24 @@ foreach ($result as $p) {
   $player[$p['id']] = $p['name'];
 }
 
-# get player handicaps and rounds played for this course
-$sql = "SELECT player_id, rounds, handicap FROM `handicap` WHERE course_id=$courseId";
+$sql = "SELECT id,par FROM weekly WHERE course_id=$cid";
+$result = db_query($sql);
+foreach ($result as $r) {
+  $pars[$r['id']] = $r['par'];
+}
+
+$sql = "SELECT weekly_id,player_id,score FROM `round` WHERE score > 0 ORDER BY player_id,weekly_id DESC";
+$result = db_query($sql);
+$scores = array();
+foreach ($result as $r) {
+#  array_push($scores[$r['player_id'], $r['score']);
+}
+
+
+$sql = "SELECT r.player_id, COUNT(r.id) AS rounds FROM round r INNER JOIN weekly w ON r.weekly_id=w.id WHERE w.course_id=1 && score != -1 GROUP BY player_id";
 $result = db_query($sql);
 foreach ($result as $r) {
   $rounds[$r['player_id']] = $r['rounds'];
-  $handicap[$r['player_id']] = $r['handicap'];
 }
 
 # get total winnings for each player
@@ -76,32 +93,13 @@ foreach ($result as $u) {
   $unpaid[$u['player_id']] = $u['total'];
 }
 
-# only show a few weeklies at the top, and the rest down below after player stats
-$weeklies = array_reverse($weeklyResult);
-$recentWeeklies = array_slice($weeklies, 0, 5);
-$olderWeeklies = array_slice($weeklies, 5);
-
-echo <<< EOF
-<html>
-<head>
-<link rel="stylesheet" href="../css/dgw/course.css">
-<script src="../js/common.js"></script>
-<script src="../js/dgw/common.js"></script>
-<script src="../js/dgw/course.js"></script>
-<title>$title</title>
-</head>
-<body onload='sortTable(null, "name");'>
-<h1>$title</h1>
-<h2>Recent Results</h2>
-<div>
-<ul>
-EOF;
-
 # make date of each weekly a link to its results
-foreach ($recentWeeklies as $w) {
+$weeklies = array_reverse($weeklyResult);
+$resultText = '';
+foreach ($weeklies as $w) {
   $weeklyId = $w['id'];
   $date = formatDate($w['date']);
-  echo "<li><a href='weekly.html?id=$weeklyId'>$date</a></li>\n";
+  $resultText .= "<div class='result'><a href='weekly.html?id=$weeklyId$test'>$date</a></div>\n";
 }
 
 if ($courseNote) {
@@ -128,18 +126,15 @@ foreach ($layouts as $layout) {
   }
   $score = $result['score'];
   if ($score > 0) {
-    $sql = "SELECT r.player_id, w.date FROM round r INNER JOIN weekly w ON r.weekly_id=w.id WHERE w.course_id=$courseId AND w.no_record=false AND w.layout='$layout' AND r.score=$score ORDER BY date";
+    $sql = "SELECT r.player_id, r.weekly_id, w.date FROM round r INNER JOIN weekly w ON r.weekly_id=w.id WHERE w.course_id=$courseId AND w.no_record=false AND w.layout='$layout' AND r.score=$score ORDER BY date DESC";
     $result = db_query($sql);
-    $records = array();
+    if (count($layouts) > 1) {
+      $recordText .= "<div class='layout'>". ucfirst($layout) . "</div>";
+    }
     foreach ($result as $r) {
       $p = $player[$r['player_id']];
-      array_push($records, "$p on " . date("M j, Y", strtotime($r['date'])));
+      $recordText .= "<div class='record'>$score by $p on <a href='weekly.html?id=" . $r['weekly_id'] . "$test'>" . date("M j, Y", strtotime($r['date'])) . "</a></div>";
     }
-    $recordText .= "<p>Course record";
-    if (count($layouts) > 1) {
-      $recordText .= " ($layout)";
-    }
-    $recordText .= ": " . $score . " by " . implode(" and by ", $records) . "</p>";
   }
 
   $sql = "SELECT player_id, ROUND(AVG(score), 1) AS 'average' FROM round r INNER JOIN weekly w ON r.weekly_id=w.id WHERE w.course_id=$courseId AND w.layout='$layout' AND r.score > 0 AND NOT w.no_record GROUP BY player_id";
@@ -158,19 +153,79 @@ foreach ($layouts as $layout) {
   $headerText .= "<th id='best-$layout'><a href='#stats' onclick='sortTable(event)'>Best ($layout)</a></th>";
 }
 
-$bonusText = get_bonus_pots($courseId);
+$bonusInfo = get_bonus_pots($courseId);
+$acePot = $bonusInfo['ace']['pot'];
+$eaglePot = $bonusInfo['eagle']['pot'];
+$bonusText = array();
+$types = array('ace', 'eagle');
+foreach ($types as $type) {
+  $bonusText[$type] = '';
+  foreach (array_reverse(array_keys($bonusInfo[$type])) as $weeklyId) {
+    if ($weeklyId == 'pot') {
+      continue;
+    }
+    $bonusText[$type] .= "<div class='bonus'>";
+    $bonusText[$type] .= $bonusInfo[$type][$weeklyId]['hole'] . " by ";
+    $bonusText[$type] .= $bonusInfo[$type][$weeklyId]['player'] . " for ";
+    $bonusText[$type] .= $bonusInfo[$type][$weeklyId]['prize'] . " on ";
+    $bonusText[$type] .= "<a href='weekly.html?id=" . $weeklyId . "$test'>" . $bonusInfo[$type][$weeklyId]['date'] . "</a>";
+    $bonusText[$type] .= "</div>";
+  }
+}
+$aceText = $bonusText['ace'];
+$eagleText = $bonusText['eagle'];
+
 
 $statsText = "<p>There have been $paidRounds total weekly rounds ($numRounds with scores reported) so far by $numPlayers different players.</p>\n";
 
-# show the header for the player stats table; the stats themselves will be displayed via JS
 echo <<< EOF
-</ul></div>
+<html>
+<head>
+<link rel="stylesheet" href="../css/dgw/course.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="../js/common.js"></script>
+<script src="../js/dgw/common.js"></script>
+<script src="../js/dgw/course.js"></script>
+<title>$title</title>
+</head>
+<body onload='sortTable(null, "name", $courseId, $hcapMinRounds, $hcapNumRounds, $hcapRate);'>
+<h1>$title</h1>
 $courseNote
-$recordText
-$bonusText
-<p>$startText Your handicap is $hcapRate% of the average number of strokes between you and par (the average score that week) for each round. It takes $hcapRounds rounds to establish a handicap. The handicaps below include scores from the most recent round, so they may differ from the handicaps that applied to that round. The handicaps below will apply to the next weekly.</p>
 $statsText
-<p><a href="admin/course.html?id=$courseId">Edit Course</a> (requires password)</p>
+<h2>Results</h2>
+<div class='container'>
+  <div class='column'>
+    <div class='header'>Weeklies</div>
+    <div class='list'>
+      $resultText
+    </div>
+  </div>
+  <div class='column'>
+    <div class='header'>Aces</div>
+    <div class='list'>
+      <div class='pot'>Pot: $acePot</div>
+      $aceText
+    </div>
+  </div>
+  <div class='column'>
+    <div class='header'>Eagles</div>
+    <div class='list'>
+      <div class='pot'>Pot: $eaglePot</div>
+      $eagleText
+    </div>
+  </div>
+  <div class='column'>
+    <div class='header'>Course Records</div>
+    <div class='list'>
+      $recordText
+    </div>
+  </div>
+</div>
+
+<h2>Handicaps</h2>
+<p>$startText Your handicap is $hcapRate% of the average number of strokes between you and par (the average score that week) for your $hcapNumRounds most recent rounds. It takes $hcapMinRounds rounds to establish a handicap.</p>
+<!-- <p><a href="admin/course.html?id=$courseId">Edit Course</a> (requires password)</p> -->
+
 <h2>Players</h2>
 <table name='stats' id='statsTable'>
 <tr align=left>
@@ -185,23 +240,6 @@ $statsText
 </table>
 EOF;
 
-if (count($olderWeeklies) > 0) {
-  echo <<< EOF
-<h2>Older Results</h2>
-<div>
-<ul>
-EOF;
-
-  foreach ($olderWeeklies as $w) {
-    $courseId = $w['id'];
-    $date = date("M j, Y", strtotime($w['date']));
-    echo "<li><a href='weekly.html?id=$courseId'>$date</a></li>\n";
-  }
-
-echo <<< EOF
-</ul></div>
-EOF;
-}
 
 echo <<< EOF
 </body>
@@ -236,18 +274,13 @@ EOF;
 #     {'Fred Flintstone':{'rounds':3,winnings:23.50,unpaid:0},average:{main:65,alternate:67},best:{main:55,alternate:57}}
 function player_data($pid) {
 
-  global $player, $rounds, $winnings, $unpaid, $handicap, $last, $layouts, $average, $best;
+  global $player, $rounds, $winnings, $unpaid, $last, $layouts, $average, $best;
 
   $r = isset($rounds[$pid]) ? $rounds[$pid] : 0;
   $w = isset($winnings[$pid]) ? $winnings[$pid] : 0;
   $u = isset($unpaid[$pid]) ? $unpaid[$pid] : 0;
 
-  $out = quote($player[$pid]) . ':{' . "'rounds':" . $r . ",'winnings':" . $w . ",'unpaid':" . $u;
-
-  $hcap = isset($handicap[$pid]) ? $handicap[$pid] : null;
-  if (isset($hcap)) {
-    $out .= ",'handicap':" . $hcap;
-  }
+  $out = quote($player[$pid]) . ':{' . "'id':" . $pid .",'rounds':" . $r . ",'winnings':" . $w . ",'unpaid':" . $u;
 
   $out .= ",'average':{";
   foreach ($layouts as $layout) {
@@ -282,27 +315,31 @@ function get_bonus_pots($courseId) {
 
   global $courseResult, $player, $potCap;
 
+  $bonusInfo = array();
+
   // get all the aces and eagles for this course
   $sql = "SELECT r.ace,r.eagle,r.weekly_id,r.player_id,w.date FROM round r INNER JOIN weekly w ON r.weekly_id=w.id WHERE w.course_id=$courseId AND (r.ace != '' OR r.eagle != '') ORDER BY w.id";
-elog(LOG_INFO, $sql);
   $result = db_query($sql);
   if (!$result) {
     return '';
   }
 
-  $pots = array();
-  $winners = array();
   $types = array('ace', 'eagle');
   foreach ($types as $type) {
     $potEntry = $courseResult[$type];
     $initialPot = $courseResult['initial_' . $type];
     $start = 0;
     $forward = 0;
+    $bonusInfo[$type] = array();
     foreach ($result as $r) {
       if (!$r[$type]) {
 	continue;
       }
+      $cap = 10000;
       $end = $r['weekly_id'];
+      if ($type == 'ace' || $end > 200) {
+        $cap = $potCap[$type];
+      }
       if ($start == 0 && $initialPot > 0) {
 	$prize = $initialPot;
       }
@@ -311,9 +348,9 @@ elog(LOG_INFO, $sql);
 	$sql = "SELECT COUNT(*) FROM round r INNER JOIN weekly w ON r.weekly_id=w.id WHERE w.course_id=$courseId AND w.id > $start AND w.id <= $end";
 	$rounds = db_query($sql, 'count');
 	$prize = ($rounds * $potEntry) + $forward;
-	if ($prize > $potCap) {
-	  $forward = $prize - $potCap;
-	  $prize = $potCap;
+	if ($prize > $cap) {
+	  $forward = $prize - $cap;
+	  $prize = $cap;
 	}
         else {
           $forward = 0;
@@ -321,25 +358,28 @@ elog(LOG_INFO, $sql);
       }
       $start = $end;
       $holes = preg_split("/[\s,]+/", $r[$type]);
-      $holeText = count($holes) > 1 ? 'holes ' . implode(' and ', $holes) : 'hole ' . $r[$type];
-      $text = "<p>On " . formatDate($r['date']) . ", " . $player[$r['player_id']] . " hit the $type pot on " . $holeText . " for " . formatMoney($prize) . "</p>\n";
-      array_push($winners, $text);
+      $holeText = count($holes) > 1 ? 'Holes ' . implode(' and ', $holes) : '#' . $r[$type];
+      $bonusInfo[$type][$r['weekly_id']] = array();
+      $bonusInfo[$type][$r['weekly_id']]['hole'] = $holeText;
+      $bonusInfo[$type][$r['weekly_id']]['date'] = formatDate($r['date']);
+      $bonusInfo[$type][$r['weekly_id']]['player'] = $player[$r['player_id']];
+      $bonusInfo[$type][$r['weekly_id']]['prize'] = formatMoney($prize);
     }
 
     // figure out how much the pots are worth now
     $sql = "SELECT COUNT(*) FROM round r INNER JOIN weekly w ON r.weekly_id=w.id WHERE w.course_id=$courseId AND w.id > $start";
-elog(LOG_INFO, "Now has: " . $sql);
     $rounds = db_query($sql, 'count');
     $prize = $forward + ($rounds * $potEntry);
-    $nextText = "";
-    if ($prize > $potCap) {
-      $next = $prize - $potCap;
-      $nextText = " (capped, " . formatMoney($next) . "  goes to next pot)";
-      $prize = $potCap;
+    $nextText = '';
+    $cap1 = $potCap[$type];
+    if ($prize > $cap1) {
+      $next = $prize - $cap1;
+      $nextText = " (capped, " . formatMoney($next) . " carries over)";
+      $prize = $cap1;
     }
-    array_push($pots, "<p>" . ucfirst($type) . " pot: " . formatMoney($prize, 0) . "$nextText</p>");
+    $bonusInfo[$type]['pot'] = formatMoney($prize, 0) . $nextText;
   }
 
-  return implode('', $pots) . implode('', $winners);
+  return $bonusInfo;
 }
 ?>
